--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crystal-clear",
   "version": "1.0.0",
   "description": "a blog\r Motivation -\r https://www.wix.com/website-template/view/html/1583?originUrl=https%3A%2F%2Fwww.wix.com%2Fwebsite%2Ftemplates%2Fhtml%2Fcreative-arts%2F2&bookName=&galleryDocIndex=5&category=creative-arts",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
