--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "express": "^4.16.2",
     "mysql2": "^1.5.1",
     "sequelize": "^4.31.1"
+  },
+  "engines": {
+    "node": "9",
+    "npm": "5"
   }
 }
