--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Mannvender/crystal-clear#readme",
   "dependencies": {
     "brain.js": "^1.1.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
+    "multer": "^1.3.0",
     "mysql2": "^1.5.1",
     "sequelize": "^4.31.1"
   },
